adjust margins/spacing, corrected layout issue on editor, added updated logo, general tidy up

--- a/app/scss/main-pepper.scss
+++ b/app/scss/main-pepper.scss
@@ -58,9 +58,11 @@ body, html {
   }
   h2{
     font-weight: bold;
+    font-size: 25px;
   }
   h3{
     color: lighten($teal, 10%) !important;
+    font-size: 20px;
   }
   .alert.alert-warning{
     background-color: #EFD2DF;
@@ -105,7 +107,8 @@ body, html {
   }
 
   .form-group{
-    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 
   .btn-primary{
@@ -114,6 +117,9 @@ body, html {
   }
 
   @media (min-width: 768px){
+    .navbar-nav {
+      margin: 10px;
+    }
     .navbar-nav > li > a {
       padding-top: 20px;
       padding-bottom: 20px;
@@ -133,6 +139,7 @@ body, html {
     .navbar-brand {
       height: 65px;
       padding: 0 30px 5px 15px;
+      margin-top: 10px;
       img{
         height: 100%;
       }
@@ -144,6 +151,9 @@ body, html {
           background-color: transparent;
           text-decoration: none;
           font-weight: bold;
+        }
+        :hover {
+          background-color: transparent;
         }
       }
       > li {
@@ -159,7 +169,7 @@ body, html {
   }
 
   .table{
-
+    margin-bottom: 10px;
     > thead{
       > tr{
         > th{
@@ -225,8 +235,8 @@ body, html {
   .login{
     border-right: 4px solid $teal;
     border-left: 4px solid $brand-primary;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 70px;
+    padding-right: 70px;
 
     h1, legend{
       margin-left: -25px;
@@ -235,17 +245,19 @@ body, html {
 
   .blogposts{
     border-left: 4px solid $brand-primary;
+    margin-top: 40px;
+    padding-left: 1.5em;
     .dataset{
       padding-right: 2em;
     }
     table{
+      margin-top: 15px;
       margin-left: 3em;
       label{
         color: black;
       }
     }
   }
-
   .published .fa-circle{
     color: $teal;
   }
